--- a/app/src/main/res/layout/see_trucks_truck_card.xml
+++ b/app/src/main/res/layout/see_trucks_truck_card.xml
@@ -64,6 +64,7 @@
             android:id="@+id/broadcastSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.827"
