--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -54,7 +54,8 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/rounded_corner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
