--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -108,6 +108,7 @@
         app:layout_constraintTop_toBottomOf="@id/offersText" />
 
     <Button
+        android:elevation="10dp"
         android:id="@+id/backToMenu"
         android:layout_width="48dp"
         android:layout_height="48dp"
