added vendor invite activity

--- a/app/src/main/res/layout/activity_emaildev.xml
+++ b/app/src/main/res/layout/activity_emaildev.xml
@@ -11,7 +11,7 @@
 
 
     <Button
-        android:id="@+id/backToEditMenuInterface2"
+        android:id="@+id/backButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
