--- a/app/src/main/res/layout/activity_vendor_invite.xml
+++ b/app/src/main/res/layout/activity_vendor_invite.xml
@@ -9,20 +9,32 @@
     android:padding="20dp">
 
 
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/ic_logo"
+        android:contentDescription="app logo"
+        app:layout_constraintEnd_toEndOf="@+id/messageTextView"
+        app:layout_constraintHorizontal_bias="0.532"
+        app:layout_constraintStart_toStartOf="@+id/messageTextView"
+        app:layout_constraintTop_toBottomOf="@+id/backToHomeButton" />
+
     <TextView
         android:id="@+id/messageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Looks like you're not a Vendor!"
         android:textAlignment="center"
-        android:textColor="@color/cardview_light_background"
+        android:textColor="#ffffff"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.35000002" />
+        app:layout_constraintVertical_bias="0.517" />
 
     <TextView
         android:id="@+id/textView2"
@@ -33,7 +45,7 @@
         android:paddingEnd="40dp"
         android:text="Contact the developers to become one!"
         android:textAlignment="center"
-        android:textColor="@color/cardview_light_background"
+        android:textColor="#ffffff"
         android:textSize="22dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,11 +63,13 @@
 
     <Button
         android:id="@+id/contactDevsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
-        android:text="Contact Devs"
-
+        android:background="@drawable/rounded_corner"
+        android:text="Contact Developers"
+        android:textAllCaps="false"
+        android:textColor="#ffa500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView2" />
