--- a/app/src/main/res/layout/activity_vendor_invite.xml
+++ b/app/src/main/res/layout/activity_vendor_invite.xml
@@ -15,8 +15,9 @@
         android:layout_marginTop="32dp"
         android:background="@drawable/ic_logo"
         android:contentDescription="app logo"
+        app:layout_constraintBottom_toTopOf="@+id/messageTextView"
         app:layout_constraintEnd_toEndOf="@+id/messageTextView"
-        app:layout_constraintHorizontal_bias="0.532"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/messageTextView"
         app:layout_constraintTop_toBottomOf="@+id/backToHomeButton" />
 
@@ -31,10 +32,9 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.517" />
+        app:layout_constraintVertical_bias="0.55" />
 
     <TextView
         android:id="@+id/textView2"
@@ -46,7 +46,7 @@
         android:text="Contact the developers to become one!"
         android:textAlignment="center"
         android:textColor="#ffffff"
-        android:textSize="22dp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/messageTextView" />
