--- a/app/src/main/res/layout/activity_edit_menu_interface.xml
+++ b/app/src/main/res/layout/activity_edit_menu_interface.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tableRow"
+        android:id="@+id/recyclerView2"
         android:layout_width="372dp"
         android:layout_height="548dp"
         android:layout_marginTop="5dp"
