--- a/app/src/main/res/layout/home_truck_card.xml
+++ b/app/src/main/res/layout/home_truck_card.xml
@@ -5,10 +5,8 @@
     android:id="@+id/cardView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:elevation="5dp"
     android:orientation="vertical"
-    android:layout_marginRight="10dp"
-    android:layout_marginLeft="10dp"
+    android:layout_margin="10dp"
     android:padding="50dp"
     app:cardCornerRadius="15dp">
 
