finalize delete thread/seeitems delete java

--- a/app/src/main/res/layout/activity_vendor_options.xml
+++ b/app/src/main/res/layout/activity_vendor_options.xml
@@ -25,8 +25,9 @@
         <Button
             android:id="@+id/trucksButton"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_marginBottom="20dp"
+            android:height="60dp"
             android:background="@drawable/rounded_corner"
             android:text="Trucks"
             android:textAllCaps="false"
@@ -36,8 +37,9 @@
         <Button
             android:id="@+id/menusButton"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_marginBottom="20dp"
+            android:height="60dp"
             android:background="@drawable/rounded_corner"
             android:text="Menus"
             android:textAllCaps="false"
@@ -47,8 +49,9 @@
         <Button
             android:id="@+id/companyInfoButton"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_marginBottom="20dp"
+            android:height="60dp"
             android:background="@drawable/rounded_corner"
             android:text="Company Info"
             android:textAllCaps="false"
@@ -58,8 +61,9 @@
         <Button
             android:id="@+id/notificationsButton"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_marginBottom="20dp"
+            android:height="60dp"
             android:background="@drawable/rounded_corner"
             android:text="Notifications"
             android:textAllCaps="false"
@@ -69,8 +73,9 @@
         <Button
             android:id="@+id/settingsButton"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_marginBottom="20dp"
+            android:height="60dp"
             android:background="@drawable/rounded_corner"
             android:text="Settings"
             android:textAllCaps="false"
@@ -80,8 +85,9 @@
         <Button
             android:id="@+id/employeesButton"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_marginBottom="20dp"
+            android:height="60dp"
             android:background="@drawable/rounded_corner"
             android:text="Employees"
             android:textAllCaps="false"
@@ -91,7 +97,8 @@
         <Button
             android:id="@+id/retqr"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
+            android:height="60dp"
             android:background="@drawable/rounded_corner"
             android:text="Retrieve QR Code"
             android:textAllCaps="false"
