--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
             android:layout_marginRight="14dp"
-            android:background="@drawable/ic_vendor"
+            android:background="@drawable/ic_vendor_icon"
             android:minWidth="48dp" />
 
         <Button
@@ -96,7 +96,7 @@
             android:layout_height="48dp"
             android:layout_marginLeft="14dp"
             android:layout_marginRight="14dp"
-            android:background="@drawable/ic_favorite"
+            android:background="@drawable/ic_favorite_icon"
             android:minWidth="48dp" />
 
         <Button
