--- a/app/src/main/res/layout/activity_vendor_options.xml
+++ b/app/src/main/res/layout/activity_vendor_options.xml
@@ -15,12 +15,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp"
+        android:padding="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.6">
+        app:layout_constraintTop_toBottomOf="@+id/backToHomeButton">
 
         <Button
             android:id="@+id/trucksButton"
