--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/curbside_gradient_background"
     android:padding="20dp"
-    android:textColor="#ffa500"
+    android:textColor="#E91E63"
     tools:context=".Notifications">
 
     <Button
@@ -25,12 +25,12 @@
 
     <Button
         android:id="@+id/order_ReadyText"
-        android:textColor="#ffa500"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:background="@drawable/rounded_corner"
         android:text="Order Ready"
         android:textAlignment="center"
+        android:textColor="#ffa500"
         app:layout_constraintBottom_toTopOf="@+id/location_ChangeText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.432"
@@ -54,11 +54,11 @@
     <Button
         android:id="@+id/dealsText"
         android:layout_width="0dp"
-        android:textColor="#ffa500"
         android:layout_height="60dp"
         android:background="@drawable/rounded_corner"
         android:text="Deals"
         android:textAlignment="center"
+        android:textColor="#ffa500"
         app:layout_constraintBottom_toTopOf="@+id/socialText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.567"
@@ -68,11 +68,11 @@
     <Button
         android:id="@+id/socialText"
         android:layout_width="0dp"
-        android:textColor="#ffa500"
         android:layout_height="60dp"
         android:background="@drawable/rounded_corner"
         android:text="Social"
         android:textAlignment="center"
+        android:textColor="#ffa500"
         app:layout_constraintBottom_toTopOf="@+id/offersText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.48"
@@ -82,11 +82,11 @@
     <Button
         android:id="@+id/offersText"
         android:layout_width="0dp"
-        android:textColor="#ffa500"
         android:layout_height="60dp"
         android:background="@drawable/rounded_corner"
         android:text="Offers"
         android:textAlignment="center"
+        android:textColor="#ffa500"
         app:layout_constraintBottom_toTopOf="@+id/emailText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
@@ -97,10 +97,10 @@
         android:id="@+id/emailText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:textColor="#ffa500"
         android:background="@drawable/rounded_corner"
         android:text="Email"
         android:textAlignment="center"
+        android:textColor="#ffa500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
@@ -108,15 +108,24 @@
         app:layout_constraintTop_toBottomOf="@id/offersText" />
 
     <Button
-        android:elevation="10dp"
         android:id="@+id/backToMenu"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/ic_arrow_back"
+        android:elevation="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="On/Off"
+        android:textColor="#3F51B5"
+        tools:layout_editor_absoluteX="280dp"
+        tools:layout_editor_absoluteY="41dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
