favorite bug fixed

--- a/app/src/main/res/layout/activity_truck_menu.xml
+++ b/app/src/main/res/layout/activity_truck_menu.xml
@@ -72,7 +72,7 @@
             android:id="@+id/truckFavoriteButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:background="@drawable/ic_favorite"
+            android:background="@drawable/ic_nonfavorite"
             app:layout_constraintBottom_toBottomOf="@+id/backToHomeButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/backToHomeButton" />
